--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <input class="form-control form-control-lg" type="text" placeholder="Un morceau">
                 </div>
                 <!-- BOUTONS -->
-                <div id="blocBoutons" class="d-flex flex-wrap justify-content-center">
+                <div id="blocBoutons" class="">
                     <h2>Choisis ta plateforme préférée</h2>
                     <div id="buttons" class="justify-content-center row row-cols-2 row-cols-md-4">
                         <button class="btn btn-mb col" id="musicbrainz"><span class="iconify" data-inline="false" data-icon="simple-icons:musicbrainz" style="color: #ffffff; font-size: 24px;"></span> MusicBrainz</button>
