--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <!-- ENTETE AVEC LOGO + H1 + NAVBAR -->
     <header class="d-flex flex-row align-items-center">
-        <img src="img/logo.png" alt="logo" id="logo">
-        <h1>Toute ma musique au même endroit !</h1>
+        <img src="img/logo3.png" alt="logo" id="logo">
+        <h1>Toute <span>ma musique</span> au même endroit !</h1>
     </header>
     <!-- NAVBAR -->
     <nav class="nav d-flex justify-content-center">
