--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- NAVBAR -->
     <nav class="nav d-flex justify-content-center">
         <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-        <a class="nav-link" href="#">Mes Artistes</a>
+        <a class="nav-link" href="myartists.html">Mes Artistes</a>
         <a class="nav-link" href="#">Qui sommes-nous</a>
     </nav>
 
@@ -36,10 +36,10 @@
                 <div id="blocBoutons" class="">
                     <h2>Choisis ta plateforme préférée</h2>
                     <div id="buttons" class="justify-content-center row row-cols-2 row-cols-md-4">
-                        <button class="btn btn-mb col" id="musicbrainz"><span class="iconify" data-inline="false" data-icon="simple-icons:musicbrainz" style="color: #ffffff; font-size: 24px;"></span> MusicBrainz</button>
-                        <button class="btn btn-sptf col" id="spotify"><span class="iconify" data-inline="false" data-icon="simple-icons:spotify" style="color: #ffffff; font-size: 24px;"></span> Spotify</button>
+                        <button class="btn btn-mb col" id="musicbrainz" data-bs-toggle="tooltip" data-bs-placement="top" title="Pas encore disponible"><span class="iconify" data-inline="false" data-icon="simple-icons:musicbrainz" style="color: #ffffff; font-size: 24px;"></span> MusicBrainz</button>
+                        <button class="btn btn-sptf col" id="spotify" data-bs-toggle="tooltip" data-bs-placement="top" title="Pas encore disponible"><span class="iconify" data-inline="false" data-icon="simple-icons:spotify" style="color: #ffffff; font-size: 24px;"></span> Spotify</button>
                         <button class="btn btn-dz col" id="deezer"><span class="iconify" data-inline="false" data-icon="simple-icons:deezer" style="color: #ffffff; font-size: 24px;"></span> Deezer</button>
-                        <button class="btn btn-ti col" id="tunein"><span class="iconify" data-inline="false" data-icon="simple-icons:tunein" style="color: #1c203c; font-size: 24px;"></span> TuneIn</button>
+                        <button class="btn btn-ti col" id="tunein" data-bs-toggle="tooltip" data-bs-placement="top" title="Pas encore disponible"><span class="iconify" data-inline="false" data-icon="simple-icons:tunein" style="color: #1c203c; font-size: 24px;"></span> TuneIn</button>
                     </div>
                 </div>
             </form>
@@ -56,22 +56,22 @@
                     <!-- ARTISTE 1 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/acdc-high-voltage.jpg" alt="Image-Artiste">
-                        <p class="badge rounded-pill bg-secondary">AC/DC</p>
+                        <a href="#"><p class="badge rounded-pill bg-secondary">AC/DC</p></a>
                     </div>
                     <!-- ARTISTE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/nirvana-nevermind.jpg" alt="Image-Artiste">
-                        <p class="badge rounded-pill bg-secondary">Nirvana</p>
+                        <a href="#"><p class="badge rounded-pill bg-secondary">Nirvana</p></a>
                     </div>
                     <!-- ARTISTE 3 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/aznavour-la-boheme.jpg" alt="Image-Artiste">
-                        <p class="badge rounded-pill bg-secondary">C. Aznavour</p>
+                        <a href="#"><p class="badge rounded-pill bg-secondary">C. Aznavour</p></a>
                     </div>
                     <!-- ARTISTE 4 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/eminem-the-eminem-show.jpg" alt="Image-Artiste">
-                        <p class="badge rounded-pill bg-secondary">Eminem</p>
+                        <a href="#"><p class="badge rounded-pill bg-secondary">Eminem</p></a>
                     </div>
                 </div>
             </div>
@@ -84,13 +84,13 @@
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/noir-desir-tostaky.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">Noir Désir</span>
-                        <span class="badge rounded-pill bg-success">Tostaky</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Tostaky</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/m-jackson_off-the-wall.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">M. Jackson</span>
-                        <span class="badge rounded-pill bg-success">Don't stop ...</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Don't stop ...</span></a>
                     </div>
                 </div>
             </div>
@@ -107,32 +107,32 @@
                     <!-- ARTISTE 1 - Image dans rep. IMG/ZIK/ARTISTES/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/artistes/pink-floyd.jpg" alt="Image-Artiste">
-                        <span class="badge rounded-pill bg-secondary">Pink Floyd</span>
+                        <a href="#"><span class="badge rounded-pill bg-secondary">Pink Floyd</span></a>
                     </div>
                     <!-- ARTISTE 2 - Image dans rep. IMG/ZIK/ARTISTES/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/artistes/deep-purple.jpg" alt="Image-Artiste">
-                        <span class="badge rounded-pill bg-secondary">Deep Purple</span>
+                        <a href="#"><span class="badge rounded-pill bg-secondary">Deep Purple</span></a>
                     </div>
                     <!-- ARTISTE 3 - Image dans rep. IMG/ZIK/ARTISTES/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/artistes/daft-punk.jpg" alt="Image-Artiste">
-                        <span class="badge rounded-pill bg-secondary">Daft Punk</span>
+                        <a href="#"><span class="badge rounded-pill bg-secondary">Daft Punk</span></a>
                     </div>
                     <!-- ARTISTE 4 - Image dans rep. IMG/ZIK/ARTISTES/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/artistes/bowie.jpg" alt="Image-Artiste">
-                        <span class="badge rounded-pill bg-secondary">D. Bowie</span>
+                        <a href="#"><span class="badge rounded-pill bg-secondary">D. Bowie</span></a>
                     </div>
                     <!-- ARTISTE 5 - Image dans rep. IMG/ZIK/ARTISTES/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/artistes/lifelike.jpg" alt="Image-Artiste">
-                        <span class="badge rounded-pill bg-secondary">Lifelike</span>
+                        <a href="#"><span class="badge rounded-pill bg-secondary">Lifelike</span></a>
                     </div>
                     <!-- ARTISTE 5 - Image dans rep. IMG/ZIK/ARTISTES/ -->
                     <div class="blocArtiste">
                         <img class="img-fluid rounded" src="img/zik/artistes/brassens.jpg" alt="Image-Artiste">
-                        <span class="badge rounded-pill bg-secondary">G. Brassens</span>
+                        <a href="#"><span class="badge rounded-pill bg-secondary">G. Brassens</span></a>
                     </div>
                 </div>
             </div>
@@ -145,37 +145,37 @@
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/soul-sugar_why-can-t-we-live-together.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">Soul Sugar</span>
-                        <span class="badge rounded-pill bg-success">Whay can't ...</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Whay can't ...</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/Sharon-Jones-And-The-Dap-Kings_world-of-love.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">S. Jones ...</span>
-                        <span class="badge rounded-pill bg-success">World of love</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">World of love</span></a>
                     </div>
                     <!-- TITRE 3 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/nick-cave_black-hair.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">N. Cave</span>
-                        <span class="badge rounded-pill bg-success">Black hair</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Black hair</span></a>
                     </div>
                     <!-- TITRE 4 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/martin-leon_va-savoir-pourquoi.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">M. Leon</span>
-                        <span class="badge rounded-pill bg-success">Va savoir ...</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Va savoir ...</span></a>
                     </div>
                     <!-- TITRE 5 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/Hania-Rani_leaving.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">H. Rani</span>
-                        <span class="badge rounded-pill bg-success">Leaving</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Leaving</span></a>
                     </div>
                     <!-- TITRE 6 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/Gettin-down-for-xmas_milly-and-milly.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">Milly&Milly</span>
-                        <span class="badge rounded-pill bg-success">Gettin' down ...</span>
+                        <a href="#"><span class="badge rounded-pill bg-success">Gettin' down ...</span></a>
                     </div>
                 </div>
             </div>
