--- a/myartists.html
+++ b/myartists.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
     <title>Mes Artistes</title>
 </head>
@@ -24,7 +25,7 @@
     <main class="container">
         <!-- BIO -->
         <h2>La <span class="titreSpanBio">BIO</span> du moment</h2>
-        <div class="row row-cols-1 row-cols-md-3 p-3">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center p-3">
             <div class="blocArtisteBio col">
                 <img class="img-fluid rounded" src="img/zik/bio/vianney.jpg" alt="Vianney">
                 <a href="http://vianney-musique.com" target="_blank"><p class="badge rounded-pill bg-secondary">Vianney</p></a>
@@ -88,8 +89,8 @@
             </div>
         </div>
 
-        <!-- RECHERCHES RECENTES -->
-        <h2 class="bandeauTitreH2 p-2">Mes recherches récentes</h2>
+        <!-- FAVORIS -->
+        <h2 class="bandeauTitreH2 p-2">Mes favoris <i class="fas fa-star"></i></h2>
         <div id="rechrec" class="row row-cols-1 row-cols-md-2">
 
             <!-- LES ARTISTES / GROUPES -->
@@ -98,21 +99,25 @@
                 <div class="contenuArtistes d-flex flex-wrap justify-content-evenly">
                     <!-- ARTISTE 1 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
+                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/acdc-high-voltage.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">AC/DC</p></a>
                     </div>
                     <!-- ARTISTE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
+                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/nirvana-nevermind.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">Nirvana</p></a>
                     </div>
                     <!-- ARTISTE 3 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
+                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/aznavour-la-boheme.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">C. Aznavour</p></a>
                     </div>
                     <!-- ARTISTE 4 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocArtiste">
+                        <span class="favArtistes"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/eminem-the-eminem-show.jpg" alt="Image-Artiste">
                         <a href="#"><p class="badge rounded-pill bg-secondary">Eminem</p></a>
                     </div>
@@ -125,12 +130,14 @@
                 <div class="contenuTitres d-flex flex-wrap justify-content-evenly">
                     <!--TITRE 1 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
+                        <span class="favTitres"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/noir-desir-tostaky.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">Noir Désir</span>
                         <a href="#"><span class="badge rounded-pill bg-success">Tostaky</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
+                        <span class="favTitres"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/m-jackson_off-the-wall.jpg" alt="Image-Titre">
                         <span class="badge rounded-pill bg-light text-dark">M. Jackson</span>
                         <a href="#"><span class="badge rounded-pill bg-success">Don't stop ...</span></a>
@@ -139,88 +146,28 @@
             </div>
         </div>
 
-        <!-- POPULAIRE DANS LA COMMUNAUTE -->
-        <h2 class="bandeauTitreH2 p-2">Artistes / titres populaires dans la communauté :</h2>
-        <div id="populaire" class="row row-cols-1 row-cols-md-2">
+        <!-- VIDEOS EN RELATION -->
+        <h2 class="bandeauTitreH2 p-2">Vidéos en relation :</h2>
+        <div id="videos" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 p-3">
 
-            <!-- LES ARTISTES / GROUPES -->
-            <div class="artistes col">
-                <h3 class="bandeauTitreH3Artistes p-1">Artistes / Groupes :</h3>
-                <div class="contenuArtistes d-flex flex-wrap justify-content-evenly">
-                    <!-- ARTISTE 1 - Image dans rep. IMG/ZIK/ARTISTES/ -->
-                    <div class="blocArtiste">
-                        <img class="img-fluid rounded" src="img/zik/artistes/pink-floyd.jpg" alt="Image-Artiste">
-                        <a href="#"><span class="badge rounded-pill bg-secondary">Pink Floyd</span></a>
-                    </div>
-                    <!-- ARTISTE 2 - Image dans rep. IMG/ZIK/ARTISTES/ -->
-                    <div class="blocArtiste">
-                        <img class="img-fluid rounded" src="img/zik/artistes/deep-purple.jpg" alt="Image-Artiste">
-                        <a href="#"><span class="badge rounded-pill bg-secondary">Deep Purple</span></a>
-                    </div>
-                    <!-- ARTISTE 3 - Image dans rep. IMG/ZIK/ARTISTES/ -->
-                    <div class="blocArtiste">
-                        <img class="img-fluid rounded" src="img/zik/artistes/daft-punk.jpg" alt="Image-Artiste">
-                        <a href="#"><span class="badge rounded-pill bg-secondary">Daft Punk</span></a>
-                    </div>
-                    <!-- ARTISTE 4 - Image dans rep. IMG/ZIK/ARTISTES/ -->
-                    <div class="blocArtiste">
-                        <img class="img-fluid rounded" src="img/zik/artistes/bowie.jpg" alt="Image-Artiste">
-                        <a href="#"><span class="badge rounded-pill bg-secondary">D. Bowie</span></a>
-                    </div>
-                    <!-- ARTISTE 5 - Image dans rep. IMG/ZIK/ARTISTES/ -->
-                    <div class="blocArtiste">
-                        <img class="img-fluid rounded" src="img/zik/artistes/lifelike.jpg" alt="Image-Artiste">
-                        <a href="#"><span class="badge rounded-pill bg-secondary">Lifelike</span></a>
-                    </div>
-                    <!-- ARTISTE 5 - Image dans rep. IMG/ZIK/ARTISTES/ -->
-                    <div class="blocArtiste">
-                        <img class="img-fluid rounded" src="img/zik/artistes/brassens.jpg" alt="Image-Artiste">
-                        <a href="#"><span class="badge rounded-pill bg-secondary">G. Brassens</span></a>
-                    </div>
-                </div>
+            <!-- Vidéo 1 -->
+            <div class="vid col rounded bg-light p-2">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/P5iqHyEpb4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
-            <!-- LES TITRES -->
-            <div class="titres col">
-                <h3 class="bandeauTitreH3Titres p-1">Titres :</h3>
-                <div class="contenuTitres d-flex flex-wrap justify-content-evenly">
-                    <!-- TITRE 1 - Image dans rep. IMG/ZIK/TITRES/ -->
-                    <div class="blocTitre">
-                        <img class="img-fluid rounded" src="img/zik/titres/soul-sugar_why-can-t-we-live-together.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">Soul Sugar</span>
-                        <a href="#"><span class="badge rounded-pill bg-success">Whay can't ...</span></a>
-                    </div>
-                    <!-- TITRE 2 - Image dans rep. IMG/ZIK/TITRES/ -->
-                    <div class="blocTitre">
-                        <img class="img-fluid rounded" src="img/zik/titres/Sharon-Jones-And-The-Dap-Kings_world-of-love.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">S. Jones ...</span>
-                        <a href="#"><span class="badge rounded-pill bg-success">World of love</span></a>
-                    </div>
-                    <!-- TITRE 3 - Image dans rep. IMG/ZIK/TITRES/ -->
-                    <div class="blocTitre">
-                        <img class="img-fluid rounded" src="img/zik/titres/nick-cave_black-hair.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">N. Cave</span>
-                        <a href="#"><span class="badge rounded-pill bg-success">Black hair</span></a>
-                    </div>
-                    <!-- TITRE 4 - Image dans rep. IMG/ZIK/TITRES/ -->
-                    <div class="blocTitre">
-                        <img class="img-fluid rounded" src="img/zik/titres/martin-leon_va-savoir-pourquoi.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">M. Leon</span>
-                        <a href="#"><span class="badge rounded-pill bg-success">Va savoir ...</span></a>
-                    </div>
-                    <!-- TITRE 5 - Image dans rep. IMG/ZIK/TITRES/ -->
-                    <div class="blocTitre">
-                        <img class="img-fluid rounded" src="img/zik/titres/Hania-Rani_leaving.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">H. Rani</span>
-                        <a href="#"><span class="badge rounded-pill bg-success">Leaving</span></a>
-                    </div>
-                    <!-- TITRE 6 - Image dans rep. IMG/ZIK/TITRES/ -->
-                    <div class="blocTitre">
-                        <img class="img-fluid rounded" src="img/zik/titres/Gettin-down-for-xmas_milly-and-milly.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">Milly&Milly</span>
-                        <a href="#"><span class="badge rounded-pill bg-success">Gettin' down ...</span></a>
-                    </div>
-                </div>
+            <!-- Vidéo 2 -->
+            <div class="vid col rounded bg-light p-2">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0i-Fhce_fac" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <!-- Vidéo 3 -->
+            <div class="vid col rounded bg-light p-2">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dbxyKR1P8vA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            <!-- Vidéo 4 -->
+            <div class="vid col rounded bg-light p-2">
+                <iframe  width="100%" height="100%" src="https://www.youtube.com/embed/8pWSLWIp2-Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </main>
