--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                     <!--TITRE 1 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/noir-desir-tostaky.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">Noir Désir</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">Noir Désir</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Tostaky</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/m-jackson_off-the-wall.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">M. Jackson</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">M. Jackson</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Don't stop ...</span></a>
                     </div>
                 </div>
@@ -144,37 +144,37 @@
                     <!-- TITRE 1 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/soul-sugar_why-can-t-we-live-together.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">Soul Sugar</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">Soul Sugar</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Whay can't ...</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/Sharon-Jones-And-The-Dap-Kings_world-of-love.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">S. Jones ...</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">S. Jones ...</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">World of love</span></a>
                     </div>
                     <!-- TITRE 3 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/nick-cave_black-hair.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">N. Cave</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">N. Cave</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Black hair</span></a>
                     </div>
                     <!-- TITRE 4 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/martin-leon_va-savoir-pourquoi.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">M. Leon</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">M. Leon</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Va savoir ...</span></a>
                     </div>
                     <!-- TITRE 5 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/Hania-Rani_leaving.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">H. Rani</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">H. Rani</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Leaving</span></a>
                     </div>
                     <!-- TITRE 6 - Image dans rep. IMG/ZIK/TITRES/ -->
                     <div class="blocTitre">
                         <img class="img-fluid rounded" src="img/zik/titres/Gettin-down-for-xmas_milly-and-milly.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">Milly&Milly</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">Milly&Milly</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Gettin' down ...</span></a>
                     </div>
                 </div>
