--- a/myartists.html
+++ b/myartists.html
@@ -132,14 +132,14 @@
                     <div class="blocTitre">
                         <span class="favTitres"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/noir-desir-tostaky.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">Noir Désir</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">Noir Désir</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Tostaky</span></a>
                     </div>
                     <!-- TITRE 2 - Image dans rep. IMG/ZIK/ -->
                     <div class="blocTitre">
                         <span class="favTitres"><a href="#"><i class="fas fa-star"></i></a></span>
                         <img class="img-fluid rounded" src="img/zik/m-jackson_off-the-wall.jpg" alt="Image-Titre">
-                        <span class="badge rounded-pill bg-light text-dark">M. Jackson</span>
+                        <a href="#"><span class="badge rounded-pill bg-light text-dark">M. Jackson</span></a>
                         <a href="#"><span class="badge rounded-pill bg-success">Don't stop ...</span></a>
                     </div>
                 </div>
