--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             </form>
         </div>
 
+        <div id="resultRecherche"></div>
+
         <!-- RECHERCHES RECENTES -->
         <h2 class="bandeauTitreH2 p-2">Mes recherches récentes</h2>
         <div id="rechrec" class="row row-cols-1 row-cols-md-2">
