--- a/myartists.html
+++ b/myartists.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="justify-content-center row row-cols-2 row-cols-md-4">
-                    <button class="btn btn-fnac col d-flex align-items-center justify-content-evenly" id="fnac"></span>Voir à la <span class="iconify" data-inline="false" data-icon="simple-icons:fnac" style="color: #000; font-size: 36px;"></span></button>
+                    <button class="btn btn-fnac col d-flex align-items-center justify-content-evenly" id="fnac">Voir à la <span class="iconify" data-inline="false" data-icon="simple-icons:fnac" style="color: #000; font-size: 36px;"></span></button>
                 </div>
             </div>
         </div>
@@ -152,22 +152,22 @@
 
             <!-- Vidéo 1 -->
             <div class="vid col rounded bg-light p-2">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/P5iqHyEpb4k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/P5iqHyEpb4k" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <!-- Vidéo 2 -->
             <div class="vid col rounded bg-light p-2">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/0i-Fhce_fac" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/0i-Fhce_fac" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <!-- Vidéo 3 -->
             <div class="vid col rounded bg-light p-2">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dbxyKR1P8vA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/dbxyKR1P8vA" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
             <!-- Vidéo 4 -->
             <div class="vid col rounded bg-light p-2">
-                <iframe  width="100%" height="100%" src="https://www.youtube.com/embed/8pWSLWIp2-Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/8pWSLWIp2-Q" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </main>
