--- a/myartists.html
+++ b/myartists.html
@@ -11,7 +11,7 @@
 <body>
     <!-- ENTETE AVEC LOGO + H1 + NAVBAR -->
     <header class="d-flex flex-row align-items-center">
-        <img src="img/logo3.png" alt="logo" id="logo">
+        <a href="index.html"><img src="img/logo3.png" alt="logo" id="logo"></a>
         <h1>Toute <span>ma musique</span> au même endroit !</h1>
     </header>
     <!-- NAVBAR -->
