--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- ENTETE AVEC LOGO + H1 + NAVBAR -->
     <header class="d-flex flex-row align-items-center">
-        <img src="img/logo3.png" alt="logo" id="logo">
+        <a href="index.html"><img src="img/logo3.png" alt="logo" id="logo"></a>
         <h1>Toute <span>ma musique</span> au même endroit !</h1>
     </header>
     <!-- NAVBAR -->
